# intellij

./: .bazelrc  .bazelrc.remote  .bazelversion  .cirrus.yml  .gitattributes  .gitignore  .licenserc.yaml  .managed.bazelproject  ARCHITECTURE.md  AUTHORS  BUILD  CHANGELOG  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS  DEV_IDE_SETUP.md  MODULE.bazel  MODULE.bazel.out  README.md  WORKSPACE  WORKSPACE.bzlmod  build-visibility.bzl  build.sh  maven_install.json  non_module_deps.bzl  renovate.json  version.bzl
clwb/tests/projects/arm_toolchain/: BUILD  MODULE.bazel  toolchains_arm_gnu.patch
clwb/tests/projects/arm_toolchain/platform/: BUILD
clwb/tests/projects/arm_toolchain/srcs/: lib.c  lib.h  main.c
clwb/tests/projects/arm_toolchain/toolchain/: BUILD
clwb/tests/projects/clang_cl/: MODULE.bazel
clwb/tests/projects/clang_cl/main/: BUILD  main.cc
clwb/tests/projects/llvm_toolchain/: MODULE.bazel  WORKSPACE
clwb/tests/projects/llvm_toolchain/main/: BUILD  hello-world.cc
clwb/tests/projects/llvm_toolchain/wasm/: wasi_sdk.bzl
clwb/tests/projects/transition/: MODULE.bazel
clwb/tests/projects/transition/main/: BUILD  copt_transition.bzl  foo_bar.bzl  multi_arch_binary.bzl  shared.cc  simple.cc
clwb/tests/projects/virtual_includes/: .bazelrc  MODULE.bazel
clwb/tests/projects/virtual_includes/lib/: BUILD
clwb/tests/projects/virtual_includes/lib/cmake/: BUILD  CMakeLists.txt  cmake_lib.cc  cmake_lib.h
clwb/tests/projects/virtual_includes/lib/impl_deps/: BUILD  impl.cc  impl.h
clwb/tests/projects/virtual_includes/lib/raw_files/: BUILD
clwb/tests/projects/virtual_includes/lib/raw_files/default/: raw_default.h
clwb/tests/projects/virtual_includes/lib/raw_files/quote/: raw_quote.h
clwb/tests/projects/virtual_includes/lib/raw_files/system/: raw_system.h
clwb/tests/projects/virtual_includes/lib/strip_absolut/: BUILD  BUILD.bazel  strip_absolut.cc  strip_absolut.h
clwb/tests/projects/virtual_includes/lib/strip_relative/: BUILD.bazel  strip_relative.cc
clwb/tests/projects/virtual_includes/lib/strip_relative/include/: strip_relative.h
clwb/tests/projects/virtual_includes/lib/transitive/: BUILD
clwb/tests/projects/virtual_includes/main/: BUILD  hello-world.cc  main.cc  raw.cc  virtual_includes.cc
examples/go/with_go_source/testa/: BUILD.bazel  src.go  testa.go
examples/go/with_go_source/testb/: BUILD.bazel  src.go  testb.go  testb_test.go
examples/go/with_proto/: BUILD.bazel  MODULE.bazel  WORKSPACE  with_proto.bazelproject
examples/go/with_proto/go/: BUILD.bazel  main.go  main_test.go
examples/go/with_proto/go/lib/: BUILD.bazel  lib.go  lib_test.go
examples/go/with_proto/proto/: BUILD.bazel  fooserver.proto  translators.go
examples/go/with_proto/run_configurations/: test_env_vars.xml  test_macro_expansion.xml
examples/java/greetings_project/: .bazelrc  MODULE.bazel  WORKSPACE  aspect.bzl  deps.MODULE.bazel  junit5_deps.bzl  maven_install.json
examples/java/greetings_project/codegen_hello/: BUILD
examples/java/greetings_project/greeting_lib/: BUILD
examples/java/greetings_project/greeting_lib/src/com/example/: Greeting.java
examples/java/greetings_project/greeting_lib/tests/com/example/: EnvVarsTest.java  GreetingTest.java
examples/java/greetings_project/greeting_lib/tests/com/example/junit4/: GreetingTest.java  ParameterizedGreetingTest.java
examples/java/greetings_project/greeting_lib/tests/com/example/junit5/: GreetingTest.java  ParameterizedGreetingTest.java
examples/java/greetings_project/hello/: BUILD  hello.bazelproject
examples/java/greetings_project/hello/src/com/example/: HelloGreeter.java
examples/java/greetings_project/hi/: BUILD  hi.bazelproject
examples/java/greetings_project/hi/src/com/example/: HiGreeter.java
examples/java/greetings_project/run_configurations/: Bazel_test_EnvVarsTest.xml  Bazel_test_EnvVarsTest_testEnvVars.xml  Bazel_test_greeting_lib_env_vars_test.xml  fragment.bazelproject
examples/kotlin/simple_project/: .bazelrc  BUILD  MODULE.bazel  maven_install.json  simple_project.bazelproject
examples/kotlin/simple_project/main/: ProjectRunner.kt
examples/kotlin/simple_project/main/lib/: Greeting.kt
examples/kotlin/simple_project/test/lib/: GreetingTest.kt
examples/python/simple_code_generator/example/: BUILD.bazel  main.py  rules.bzl
examples/python/with_numpy/: .bazelrc  MODULE.bazel  requirements.txt
examples/python/with_numpy/app/: BUILD.bazel  main.py
examples/python/with_numpy/lib/: BUILD.bazel  symbols.py
examples/python/with_numpy/tools/intellij/: .managed.bazelproject
examples/python/with_proto/proto/: BUILD.bazel  hello.proto
examples/scala/with_bzlmod/: MODULE.bazel
examples/scala/with_bzlmod/hello/: BUILD  Hello.scala  HelloApp.scala  HelloTest.scala
querysync/java/com/google/idea/blaze/qsync/: AffectedPackages.java  AffectedPackagesCalculator.java  BUILD  BUILD.bazel  BlazeProject.java  BlazeProjectListener.java  BlazeProjectSnapshot.java  BlazeProjectSnapshotBuilder.java  BlazeQueryParser.java  BuildGraph.java  BuildGraphData.java  BuildGraphListener.java  FullProjectUpdate.java  GeneratedSourceProjectUpdater.java  GraphToProjectConverter.java  NoopProjectRefresh.java  NoopProjectUpdate.java  PackageReader.java  PackageStatementParser.java  ParallelPackageReader.java  PartialProjectRefresh.java  PartialProjectUpdate.java  ProjectProtoTransform.java  ProjectRefresher.java  ProjectStructure.java  ProjectStructureFactory.java  ProjectUpdate.java  QuerySyncProjectSnapshot.java  RefreshOperation.java  RefreshParameters.java  SnapshotHolder.java  SrcJarInnerPathFinder.java  SrcJarProjectUpdater.java  TestSourceGlobMatcher.java  WorkspaceResolvingPackageReader.java
querysync/java/com/google/idea/blaze/qsync/artifacts/: ArtifactDirectoryUpdate.java  BUILD  BuildArtifact.java  BuildArtifactProvider.java  FileTransform.java
querysync/java/com/google/idea/blaze/qsync/build_output/: BUILD  OutputInfo.java
querysync/java/com/google/idea/blaze/qsync/cc/: BUILD  CcDependenciesInfo.java  CcIncludeDirectories.java  CcWorkspaceBuilder.java  FlagResolver.java  (+2 more)
(+6025 files in other folders)
