bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "35.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "rules_kotlin", version = "2.3.20")

register_toolchains("//third_party/kotlin:toolchain")

# required for aspect tests
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "abseil-cpp", version = "20250814.2")

# dependency on the new aspect's sdk
bazel_dep(name = "intellij_aspect_sdk")
git_override(
    module_name = "intellij_aspect_sdk",
    commit = "ab9b1809d414eeb38c679d9938dfebb7b91a7660",
    remote = "https://github.com/JetBrains/intellij-aspect.git",
)

# import clwb test projects for aspect tests
local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

local_repository(
    name = "clwb_virtual_includes_project",
    path = "clwb/tests/projects/virtual_includes",
)

local_repository(
    name = "clwb_virtual_includes_external",
    path = "clwb/tests/projects/virtual_includes/lib/external",
)

# custom rules_bazel_integration_test version, patches are required until we write our own version of these rules :c
bazel_dep(name = "rules_bazel_integration_test", version = "0.37.1")
single_version_override(
    module_name = "rules_bazel_integration_test",
    patch_strip = 1,
    patches = ["//third_party/bazel/patches:rules_bazel_integration_test.patch"],
)

# configure python cor rules_python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12", "python_versions")

# configure bazel binaries for rules_bazel_integration_test
bazel_binaries = use_extension("@rules_bazel_integration_test//:extensions.bzl", "bazel_binaries")
bazel_binaries.download(version = "7.7.1")
bazel_binaries.download(version = "8.6.0")
bazel_binaries.download(version = "9.1.1")
bazel_binaries.download(version = "last_green")
use_repo(
    bazel_binaries,
    "bazel_binaries",
    "bazel_binaries_bazelisk",
    "build_bazel_bazel_7_7_1",
    "build_bazel_bazel_8_6_0",
    "build_bazel_bazel_9_1_1",
    "build_bazel_bazel_last_green",
)

# configure maven for rules_java_external
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "junit:junit:4.13.2",
        "org.opentest4j:opentest4j:1.3.0",
        "org.mockito:mockito-core:5.23.0",
        "org.objenesis:objenesis:3.5",
        "net.bytebuddy:byte-buddy:1.18.10",
        "net.bytebuddy:byte-buddy-agent:1.18.10",
        "com.google.flogger:flogger:0.9",
        "com.google.flogger:flogger-system-backend:0.9",
        "com.googlecode.java-diff-utils:diffutils:1.3.0",
        # Usually, we'd get this from the JetBrains SDK, but the bundled one not aware of Bazel platforms,
        # so it fails on certain setups.
        "net.java.dev.jna:jna:5.19.0",
        "net.java.dev.jna:jna-platform:5.19.0",
        "com.google.auto.value:auto-value-annotations:1.11.1",
        "com.google.auto.value:auto-value:1.11.1",
        "com.google.code.findbugs:jsr305:3.0.2",
        "com.google.code.gson:gson:2.14.0",
        "com.google.errorprone:error_prone_annotations:2.49.0",
        "com.google.guava:guava:33.6.0-jre",  # changed to jre
        "com.google.truth:truth:1.4.5",
        "com.google.j2objc:j2objc-annotations:3.1",
        "com.google.guava:failureaccess:1.0.3",
        "org.hamcrest:hamcrest-core:3.0",
        "org.jetbrains:annotations:26.1.0",
        "org.jetbrains.pty4j:pty4j:0.13.12",
        "org.opentest4j:opentest4j:1.3.0",
        # Only required for the maintenance script, otherwise use the stdlib for the sdk
        "org.jetbrains.kotlin:kotlin-stdlib:2.2.21",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.11.0",
    ],
    fail_if_repin_required = True,
    generate_compat_repositories = True,
    known_contributing_modules = [
        "",
        "bazel_worker_java",
        "protobuf",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://cache-redirector.jetbrains.com/maven-central",
        "https://cache-redirector.jetbrains.com/intellij-dependencies",
    ],
)
use_repo(
    maven,
    "com_google_guava_failureaccess",
    "com_google_guava_guava",
    "com_google_j2objc_j2objc_annotations",
    "maven",
    "org_opentest4j_opentest4j",
    "unpinned_maven",
    auto_value = "com_google_auto_value_auto_value",
    auto_value_annotations = "com_google_auto_value_auto_value_annotations",
    bytebuddy = "net_bytebuddy_byte_buddy",
    bytebuddy_agent = "net_bytebuddy_byte_buddy_agent",  # Can it be `bytebuddy-agent`? (not a legal identifier)
    diffutils = "com_googlecode_java_diff_utils_diffutils",
    error_prone_annotations = "com_google_errorprone_error_prone_annotations",
    flogger = "com_google_flogger_flogger",
    flogger_system_backend = "com_google_flogger_flogger_system_backend",
    gson = "com_google_code_gson_gson",
    hamcrest = "org_hamcrest_hamcrest_core",
    jetbrains_annotations = "org_jetbrains_annotations",
    jna = "net_java_dev_jna_jna",
    jsr305_annotations = "com_google_code_findbugs_jsr305",
    junit = "junit_junit",
    mockito = "org_mockito_mockito_core",
    objenesis = "org_objenesis_objenesis",
    ptylib = "org_jetbrains_pty4j_pty4j",
    truth = "com_google_truth_truth",
)

# install all required intellij sdks and plugins
intellij_platform = use_extension("//intellij_platform_sdk:extension.bzl", "intellij_platform")
intellij_platform.jbr(
    major = "25.0.3",
    minor = "b508.4",
    sha256 = {
        "osx-aarch64": "5eec8b014c9e0503ab4b9c60f7890f136752fe765375042a189dd81c297ee7ee",
        "linux-x64": "b41b8f9451ca76b0bb32270266f8f0e7437bf97a9737be84d46bd0cdfa01b3dd",
        "windows-x64": "b5d07556d36fa84239e35b5458ce31e7f6e2b8088d6423ddbf29c19ebd8812b4",
    },
)
intellij_platform.jbr(
    major = "21.0.11",
    minor = "b1163.116",
    sha256 = {
        "osx-aarch64": "ff2d12e6cf6b2f9d7793b8b6596afe413bdd4074fbfc91d9a36f379df61df182",
        "linux-x64": "097bf328b5bf5a236c095b8c8e5204c0eda91e5baa06b37383a7754b10671d8b",
        "windows-x64": "a3b01a47e67207722064c136616a3c0529e0dc96e17d0d5e44a0e8b4a92c57e7",
    },
)
intellij_platform.sdk(
    name = "clion",
    build_file = "//intellij_platform_sdk:BUILD.clion253",
    sha256 = "d8c940996a4730dd44725c32fba949a8361b02433c9b105ea3a9feab1850616f",
    version = "2025.3.5",
)
intellij_platform.sdk(
    name = "clion",
    build_file = "//intellij_platform_sdk:BUILD.clion261",
    sha256 = "cb0aea567dd03bd645415077ecafc19c2a439e6fe7939e38d19e30ff6a86debb",
    version = "2026.1.2",
)
intellij_platform.sdk(
    name = "clion",
    alias = "clion_2026_2",
    build_file = "//intellij_platform_sdk:BUILD.clion262",
    sha256 = "c9891eb2a7c217ad5034f5ecae1e4a6a6d4bd7c17ab891b1e2722173b52a9435",
    version = "262.6653.16-EAP-SNAPSHOT",
)
intellij_platform.plugin(
    name = "PythonCore",
    alias = "python_2025_3",
    build_file = "//intellij_platform_sdk:BUILD.python",
    sha256 = "d8366d9e21ae75d46ada7ee663e7d9536fc914545e439cfbd14d7a86bdf35152",
    version = "253.33514.17",
)
intellij_platform.plugin(
    name = "PythonCore",
    alias = "python_2026_1",
    build_file = "//intellij_platform_sdk:BUILD.python",
    sha256 = "5efe2abc0145eca730ce9fc6e4185ada2925d77d8fea284d811106e06b34ed53",
    version = "261.24374.151",
)
intellij_platform.plugin(
    name = "PythonCore",
    alias = "python_2026_2",
    build_file = "//intellij_platform_sdk:BUILD.python",
    sha256 = "28de79d952acdc4c44eecaf0fa7d3b9b55ccf77b5ee08d0bc35ce3eee03f7b53",
    version = "262.6653.22",
)
use_repo(intellij_platform, "clion_2025_3", "clion_2026_1", "clion_2026_2", "jbr_21_0_11", "jbr_25_0_3", "python_2025_3", "python_2026_1", "python_2026_2")

register_toolchains(
    "@clion_2025_3//:runtime",
    "@clion_2025_3//:bootstrap_runtime",
    "@clion_2026_1//:runtime",
    "@clion_2026_1//:bootstrap_runtime",
    "@clion_2026_2//:runtime",
    "@clion_2026_2//:bootstrap_runtime",
)

# build tools deploy jars for the tools required by the plugin
bazel_build_jars = use_repo_rule("//third_party/bazel/jars:extension.bzl", "bazel_build_jars")

bazel_build_jars(
    name = "bazel_jars",
    jars = [
        "//src/tools/execlog:parser_deploy.jar",
        "//src/main/java/net/starlark/java/cmd:starlark_deploy.jar",
    ],
    patches = [
        "//third_party/bazel/jars:starlark_repl.patch",
        "//third_party/bazel/jars:execlog_parser.patch",
    ],
    sha256 = "bdc0f7fb282eaa31df2e97d1bb1fc22965ec6d9ec95a8e8f126c7a2a7636552c",
    tag = "9.1.1",
)
