bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(
    name = "rules_go",
    version = "0.56.1",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "gazelle",
    version = "0.45.0",
    repo_name = "bazel_gazelle",
)
bazel_dep(
    name = "protobuf",
    version = "32.1",
    repo_name = "com_google_protobuf",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "google.golang.org/grpc",
    sum = "h1:bs/cUb4lp1G5iImFFd3u5ixQzweKizoZJAwBNLR42lc=",
    version = "v1.65.0",
)
go_deps.module(
    path = "google.golang.org/genproto/googleapis/rpc",
    sum = "h1:vtJDfLUGToYyn1hvIGIC+GoVCMD0wuoUmfXxcKzxxNE=",
    version = "v0.0.0-20240808180809-ff45bb20cc4e",
)
use_repo(
    go_deps,
    "org_golang_google_genproto_googleapis_rpc",
    "org_golang_google_grpc",
)
