include("//:deps.MODULE.bazel")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # JUnit 4
        "junit:junit:4.13.2",

        # JUnit 5 (Jupiter + Engine + API)
        "org.junit.jupiter:junit-jupiter-api:5.12.1",
        "org.junit.jupiter:junit-jupiter-engine:5.12.1",
        "org.junit.jupiter:junit-jupiter-params:5.12.1",
        "org.junit.platform:junit-platform-reporting:1.12.1",
        "org.junit.platform:junit-platform-launcher:1.12.1",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
