bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "contrib_rules_jvm", version = "0.30.0")
bazel_dep(name = "rules_jvm_external", version = "6.8")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # JUnit 4
        "junit:junit:4.13.2",

        # JUnit 5 (Jupiter + Engine + API)
        "org.junit.jupiter:junit-jupiter-api:5.13.4",
        "org.junit.jupiter:junit-jupiter-engine:5.13.4",
        "org.junit.jupiter:junit-jupiter-params:5.13.4",
        "org.junit.platform:junit-platform-reporting:1.13.4",
        "org.junit.platform:junit-platform-launcher:1.13.4",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
