bazel_dep(
    name = "rules_java",
    version = "8.15.1",
)
bazel_dep(
    name = "rules_kotlin",
    version = "2.1.8",
)
bazel_dep(name = "rules_jvm_external", version = "6.8")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.4.4",
    ],
    fail_if_repin_required = True,
    generate_compat_repositories = True,
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
    junit = "junit_junit",
    truth = "com_google_truth_truth",
)
