bazel_dep(name = "rules_python", version = "0.36.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip.parse(
    hub_name = "my_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "my_deps")

use_repo(python, "python_versions")
