bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "platforms", version = "1.0.0")

cc_configure = use_extension("@rules_cc//cc:extensions.bzl", "cc_configure_extension")
use_repo(cc_configure, "local_config_cc")

register_execution_platforms("//:x64_windows-clang-cl")
register_toolchains("@local_config_cc//:cc-toolchain-x64_windows-clang-cl")