bazel_dep(name = "rules_cc", version = "0.2.3")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "sqlite",
    build_file = "//third_party/sqlite:BUILD.sqlite.bazel",
    sha256 = "f52b72a5c319c3e516ed7a92e123139a6e87af08a2dc43d7757724f6132e6db0",
    strip_prefix = "sqlite-autoconf-3350500",
    urls = [
        "https://mirror.bazel.build/www.sqlite.org/2021/sqlite-autoconf-3350500.tar.gz",
        "https://www.sqlite.org/2021/sqlite-autoconf-3350500.tar.gz",
    ],
)
