load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "github.com/bazelbuild/intellij/examples/go/with_proto/go",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib",
        "//proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "go",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)
