load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "fooproto_proto",
    srcs = ["fooserver.proto"],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:empty_proto"],
)

go_proto_library(
    name = "fooproto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/bazelbuild/intellij/examples/go/with_proto/proto",
    proto = ":fooproto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    srcs = ["translators.go"],
    embed = [":fooproto_go_proto"],
    importpath = "github.com/bazelbuild/intellij/examples/go/with_proto/proto",
    visibility = ["//visibility:public"],
)
